# unshackle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  OLD-CHANGELOG.md  README.md  install.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
unshackle/: __main__.py  unshackle-example.yaml  unshackle.yaml
unshackle/commands/: cfg.py  dl.py  env.py  kv.py  prd.py  search.py  serve.py  util.py  wvd.py
unshackle/core/: __main__.py  binaries.py  cacher.py  commands.py  config.py  console.py  constants.py  credential.py  events.py  search_result.py  service.py  services.py  session.py  title_cacher.py  update_checker.py  utilities.py  vault.py  vaults.py
unshackle/core/cdm/: __init__.py  decrypt_labs_remote_cdm.py
unshackle/core/downloaders/: __init__.py  aria2c.py  curl_impersonate.py  n_m3u8dl_re.py  requests.py
unshackle/core/drm/: __init__.py  clearkey.py  playready.py  widevine.py
unshackle/core/manifests/: __init__.py  dash.py  hls.py  ism.py  m3u8.py
unshackle/core/proxies/: __init__.py  basic.py  hola.py  nordvpn.py  surfsharkvpn.py
unshackle/core/titles/: episode.py  movie.py  song.py  title.py
unshackle/core/tracks/: __init__.py  attachment.py  audio.py  chapter.py  chapters.py  hybrid.py  subtitle.py  track.py  tracks.py  video.py
unshackle/core/utils/: click_types.py  gen_esn.py  subprocess.py  tags.py  webvtt.py
unshackle/services/EXAMPLE/: __init__.py  config.yaml
unshackle/services/Netflix/: __init__.py  config.yaml
unshackle/services/Netflix/MSL/: MSLKeys.py  __init__.py
unshackle/services/Netflix/MSL/schemes/: DiffieHellman.py  EntityAuthentication.py  KeyExchangeRequest.py  UserAuthentication.py  __init__.py
unshackle/utils/: base62.py  osenvironment.py
unshackle/vaults/: API.py  HTTP.py  MySQL.py  SQLite.py
